<resources>
    <string name="app_name">ClockWidget</string>
    <string name="title_activity_settings">Settings</string>
    <string name="save_title">Save</string>

    <!-- Preference Titles -->
    <string name="general_header">General</string>
    <string name="time_header">Time</string>
    <string name="date_header">Date</string>
    <string name="alarm_header">Alarm</string>

    <string name="show_title">Show</string>
    <string name="color_title">Color</string>
    <string name="font_title">Font</string>
    <string name="size_title">Size</string>
    <string name="align_title">Align</string>
    <string name="format_title">Format</string>

    <string name="time_format_dialog_msg">Hour: \u0020 H (0-23) \u0020 HH (00-23)\nHour: \u0020 h (1-12) \u0020 hh (01-12)\nMinute: m (0-59) \u0020 mm (00-59)\nSecond: s (0-59) \u0020 ss (00-59)\nam/pm:\u0020 a (AM-PM)\n\nH:mm \u0020 = 1:01\nHH:mm\u0020 = 01:01\nh:mm a = 1:01 AM</string>
    <string name="date_format_dialog_msg">Year:\u0020 yy\u0020 (24) \u0020 yyyy (2024)\nMonth: MMM (Jan)\u0020 MMMM (January)\nDay: \u0020 d \u0020 (1)\u0020 \u0020 dd \u0020 (01)\nW day: E \u0020 (Tue)\u0020 EEEE (Tuesday)\n\nEEEE, MMM d = Tuesday, Jan 5</string>
    <string name="alarm_format_dialog_msg">Year:\u0020 yy\u0020 (24) \u0020 yyyy (2024)\nMonth: MMM (Jan)\u0020 MMMM (January)\nDay: \u0020 d \u0020 (1)\u0020 \u0020 dd \u0020 (01)\nW day: E \u0020 (Tue)\u0020 EEEE (Tuesday)\n\nHour: \u0020 H (0-23) \u0020 HH (00-23)\nHour: \u0020 h (1-12) \u0020 hh (01-12)\nMinute: m (0-59) \u0020 mm (00-59)\nSecond: s (0-59) \u0020 ss (00-59)\nam/pm:\u0020 a (AM-PM)\n\nE HH:mm = Tue 08:30</string>
</resources>
